# nethid

./: README.md  meson.build
include/: common.h
src/: common.c
src/client/: main.c
src/server/: main.c
